update add toast

--- a/src/app/dialog/forms/add/add.component.html
+++ b/src/app/dialog/forms/add/add.component.html
@@ -25,4 +25,7 @@
       </div>
     </div>
   </div>
+  <div class="submit">
+    <button pButton label="Submit" type="submit" (click)="onSave()"></button>
+  </div>
 </div>
