--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,3 +69,5 @@
 </div>
 
 <p-confirmDialog header="Confirm" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+
+<p-toast position="top-right"></p-toast>
